--- a/src/less/error404.less
+++ b/src/less/error404.less
@@ -1,7 +1,10 @@
 .error404 {
+	padding-top: 20px;
+	padding-bottom: 130px;
 	background: url(../img/error404-bg.jpg) no-repeat center/cover;
 	
 	.sm-block({
+		padding-bottom: 20px;
 		background: url(../img/404-bg-mob.png) no-repeat center top/cover;
 		// background: linear-gradient(296.87deg, #D3D4D7 25.79%, rgba(211, 212, 215, 0) 74.04%);
 	});
@@ -49,6 +52,7 @@
 		.sm-block({
 			// background: url(../img/404-bg-mob.png) no-repeat;
 			padding-top: 330px;
+			padding-bottom: 70px;
 		});
 	}
 
