--- a/css/styles.css
+++ b/css/styles.css
@@ -180,6 +180,10 @@ body {
   height: 100%;
 }
 
+html.sr .load-hidden {
+  visibility: hidden;
+}
+
 body {
   font-family: 'Gilroy', Arial, sans-serif;
   font-size: 14px;
@@ -244,10 +248,18 @@ input[type='submit'] {
   font-size: 16px;
   line-height: 130%;
   letter-spacing: 0.02em;
-  width: 100%;
   border: none;
   padding: 12px;
+  display: inline-block;
   text-decoration: none;
+  box-shadow: 0px 62px 163px rgba(50, 40, 31, 0.13), 0px 25.9021px 69.0427px rgba(50, 40, 31, 0.0991229), 0px 13.8485px 34.3572px rgba(50, 40, 31, 0.090404), 0px 7.76336px 16.6504px rgba(50, 40, 31, 0.0831885), 0px 4.12306px 7.02444px rgba(50, 40, 31, 0.0722786), 0px 1.7157px 2.03786px rgba(50, 40, 31, 0.0514107);
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.btn:hover {
+  box-shadow: none;
+  background-color: #E19238;
 }
 
 .header {
@@ -482,6 +494,12 @@ input[type='submit'] {
   position: relative;
   z-index: 2;
   display: block;
+  width: 100%;
+}
+
+.contacts .form__btn:hover {
+  -webkit-transform: none;
+          transform: none;
 }
 
 .contacts .form label {
@@ -689,7 +707,7 @@ input[type='submit'] {
 }
 
 .footer__req span {
-  color: #ffffff;
+  color: #CACDD7;
   font-weight: 700;
   letter-spacing: 0.02em;
 }
@@ -722,6 +740,14 @@ input[type='submit'] {
   margin-left: 15px;
   margin-right: 15px;
   width: calc(75% - 30px);
+}
+
+.footer__conf a {
+  transition: color 0.3s ease;
+}
+
+.footer__conf a:hover {
+  color: #F49D37;
 }
 
 @media screen and (max-width: 1200px) {
@@ -1074,6 +1100,7 @@ input[type='submit'] {
 
   .error404__content {
     padding-top: 330px;
+    padding-bottom: 70px;
   }
 
   .error404 p {
