--- a/src/less/contacts.less
+++ b/src/less/contacts.less
@@ -5,35 +5,21 @@
 		padding-top: 5px;
 	});
 
-	&__inner {
-		padding-top: 64px;
-		padding-bottom: 62px;
+	.section__content {
+		// padding-top: 64px;
+		// padding-bottom: 62px;
 
-		.sm-block({
-			padding-top: 50px;
-		});
+		// .sm-block({
+		// 	padding-top: 50px;
+		// });
+	}
 
-		h1 {
-			margin-bottom: 60px;
-			max-width: 816px;
-			font-weight: 700;
-			font-size: 60px;
-			line-height: 100%;
-			letter-spacing: 0.03em;
-
-			.xl-block({
-				margin-bottom: 40px;
-				font-size: 45px;
-				line-height: 110%;
-				letter-spacing: 0.02em;
-			});
-
-			.sm-block({
-				margin-bottom: 30px;
-				font-size: 30px;
-				line-height: 115%;
-			});
-		}
+	&__title {
+		text-transform: unset!important;
+		margin-bottom: 60px;
+		max-width: 816px;
+		.xl(margin-bottom, 40px);
+		.sm(margin-bottom, 30px);
 	}
 
 	&__wrapper {
@@ -241,6 +227,9 @@
 
 			display: block;
 			width: 100%;
+			padding: 8px 26px;
+			font-size: 16px;
+
 			&:hover {
 				transform: none;
 			}
