--- a/src/less/logo.less
+++ b/src/less/logo.less
@@ -5,10 +5,14 @@
 	font-size: 20px;
 	line-height: 100%;
 	text-transform: uppercase;
+	transition: color 0.3s ease;
+
+	&:hover {
+		color: @accent;
+	}
 
 	.md-block({
 		font-size: 10px;
-		
 	});
 
 	img {
