--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -6,12 +6,32 @@
 @import "logo.less";
 @import "btn.less";
 
+//hero page
+
 @import "header.less";
+
+@import "hero.less";
+@import "points.less";
+@import "aim.less";
+
+@import "advantages.less";
+@import "ssample.less";
+@import "steps.less";
+
+@import "footer.less";
+
+//pages
+
 @import "breadcrumbs.less";
 
+@import "sample.less";
+@import "memo.less";
+@import "faq.less";
+@import "price.less";
 @import "contacts.less";
 @import "privacy.less";
 @import "error404.less";
 
-@import "footer.less";
+@import "popup.less";
+
 
