--- a/src/less/header.less
+++ b/src/less/header.less
@@ -17,7 +17,39 @@
 
 	&__menu {
 		display: flex;
-		.xl(display, none);
+		
+		.xl-block( {
+			text-align      : center;
+			transform       : translateX(-150%);
+			display         : none;
+			transform-origin: right top;
+			transition      : all 0.5s ease-in-out;
+			display         : flex;
+			flex-direction  : column;
+			justify-content : center;
+			align-items     : center;
+			position        : fixed;
+			left            : 0;
+			top             : 0;
+			z-index         : 12;
+
+			width           : 100%;
+			height          : 100%;
+			padding         : 40px;
+			color           : @white;
+			background-color: @black;
+
+			li {
+					margin-bottom: 20px;
+					font-size    : 30px;
+					margin       : 10px;
+					padding      : 10px;
+			}
+	});
+
+	&.header__menu--open {
+		transform: translateX(0);
+	}
 		
 		a {
 			font-size: 16px;
@@ -66,14 +98,114 @@
 		// background: url(../img/tel.svg) no-repeat;
 	}
 
-	&__burger {
-		display: none;
-		font-weight: 700;
-		font-size: 20px;
-		line-height: 130%;
-		text-transform: uppercase;
+	// &__burger {
+	// 	display: none;
+	// 	font-weight: 700;
+	// 	font-size: 20px;
+	// 	line-height: 130%;
+	// 	text-transform: uppercase;
 
-		.xl(display, block);
-		.sm(font-size, 16px);
+	// 	.xl(display, block);
+	// 	.sm(font-size, 16px);
+	// }
+
+	&__burger {
+		@toggler-part-height  : 2px;
+		@toggler-part-bg-color: @white;
+		@transition-time      : 0.5s;
+
+		display: none;
+
+		.xl-block( {
+						display    : block;
+						display    : flex;
+						// margin-left: auto;
+				}
+
+		);
+		// position: relative;
+		z-index        : 13;
+		align-items    : center;
+		justify-content: center;
+		width          : 32px;
+		height         : 19px;
+		user-select    : none;
+		cursor         : pointer;
+
+		&:focus {
+				outline: none;
+		}
+
+		&>span {
+				display      : inline-block;
+				width        : 100%;
+				height       : @toggler-part-height;
+				background   : @toggler-part-bg-color;
+				position     : relative;
+				transition   : background @transition-time @transition-time;
+				border-radius: 30px;
+
+				&:before,
+				&:after {
+						content         : '';
+						position        : absolute;
+						left            : 0;
+						height          : @toggler-part-height;
+						background      : @toggler-part-bg-color;
+						transform-origin: 50% 50%;
+						transition      : top @transition-time @transition-time, transform @transition-time;
+						border-radius   : 30px;
+				}
+
+				&:before {
+						width: 100%;
+						top  : -8px;
+				}
+
+				&:after {
+						width: 100%;
+						top  : 8px;
+				}
+		}
+
+		&--close {
+				position: relative;
+				z-index : 15;
+
+				>span {
+						transition: background @transition-time;
+						background: transparent;
+
+						&:before,
+						&:after {
+								width           : 100%;
+								transition      : top @transition-time, transform @transition-time @transition-time;
+								top             : 0;
+								background-color: @ss3;
+						}
+
+						&:before {
+								transform: rotate3d(0, 0, 1, 45deg);
+						}
+
+						&:after {
+								transform: rotate3d(0, 0, 1, -45deg);
+						}
+				}
+		}
+}
+
+}
+
+.home {
+	.header {
+		position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 3;
+    width: 100%;
+		background-color: transparent;
+
+		.xl(background-color, @black);
 	}
 }
