--- a/src/less/privacy.less
+++ b/src/less/privacy.less
@@ -1,12 +1,12 @@
 .privacy {
-	&__content {
+	.section__content {
 		max-width: 750px;
-		padding-top: 60px;
-		padding-bottom: 130px;
+		// padding-top: 60px;
+		// padding-bottom: 130px;
 
-		.md-block({
-			padding-bottom: 70px;
-		});
+		// .md-block({
+		// 	padding-bottom: 70px;
+		// });
 	}
 
 	&__title {
