--- a/src/less/price.less
+++ b/src/less/price.less
@@ -156,7 +156,7 @@
 		margin-bottom: 15px;
 
 		column-count:2;
-		column-width: 190px;
+		// column-width: 190px;
 
 		.sm-block({
 			// margin-top: 2px;
