--- a/src/less/sample.less
+++ b/src/less/sample.less
@@ -24,5 +24,17 @@
 
 		border-top: 4px solid @ss4;
 		border-bottom: 4px solid @ss4;
+
+		.xl-block({
+			padding: 20px 0;
+			font-size: 45px;
+			line-height: 110%;
+		});
+
+		.md-block({
+			padding: 15px 0;
+			font-size: 20px;
+			line-height: 130%;
+		});
 	}
 }
