--- a/src/less/contacts.less
+++ b/src/less/contacts.less
@@ -225,29 +225,15 @@
 			position: relative;
 			z-index: 2;
 
-			display: block;
-			width: 100%;
-			padding: 8px 26px;
-			font-size: 16px;
-
-			&:hover {
-				transform: none;
-			}
+			// &:hover {
+			// 	transform: none;
+			// }
 		}
 
-		label {
-			display: block;
-			color: @ss6;
-			font-size: 12px;
-		}
 
 		input {
 			width: 100%;
-			padding: 10px 10px 7px;
-			color: @ss4;
-			background: rgba(255, 255, 255, 0.2);
-			border-color: transparent;
-			border-radius: 2px;
+			
 		}
 	}
 	
