--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -5,6 +5,7 @@
 
 @import "logo.less";
 @import "btn.less";
+@import "form.less";
 
 //hero page
 
@@ -13,10 +14,13 @@
 @import "hero.less";
 @import "points.less";
 @import "aim.less";
-
+@import "present.less";
+@import "banner.less";
 @import "advantages.less";
 @import "ssample.less";
 @import "steps.less";
+@import "faq.less";
+@import "price.less";
 
 @import "footer.less";
 
@@ -26,8 +30,6 @@
 
 @import "sample.less";
 @import "memo.less";
-@import "faq.less";
-@import "price.less";
 @import "contacts.less";
 @import "privacy.less";
 @import "error404.less";
