--- a/src/less/config.less
+++ b/src/less/config.less
@@ -171,6 +171,7 @@ body:not(.home) {
 main {
 	// min-height: 100vh;
 	min-height: 500px;
+	overflow-x: hidden;
 }
 
 /* Наследуем шрифты для инпутов и кнопок */
