--- a/src/less/price.less
+++ b/src/less/price.less
@@ -205,7 +205,7 @@
 			}
 
 			&:first-child::before {
-				background-image: url(../img/point-1.svg);
+				background-image: url(../img/bio.svg);
 			}
 
 			&:nth-child(2)::before {
@@ -298,13 +298,13 @@
 
 			li {
 				&:first-child::before {
-					background-image: url(../img/point-2-1.svg);
+					background-image: url(../img/camera.svg);
 				}
 				&:nth-child(2)::before {
-					background-image: url(../img/point-2-2.svg);
+					background-image: url(../img/film.svg);
 				}
 				&:nth-child(3)::before {
-					background-image: url(../img/point-2-3.svg);
+					background-image: url(../img/audio.svg);
 				}
 				&:nth-child(4)::before {
 					background-image: url(../img/awards.svg);
