--- a/src/less/form.less
+++ b/src/less/form.less
@@ -1,24 +1,104 @@
 .form {
+	width: 740px;
+	margin: 0 auto;
+	max-width: 100%;
+	padding: 100px 70px 60px;
+
+	color: @white;
+	background-color: @ss1;
+	border-radius: 40px;
+
+	.md-block({
+		max-width: 95%;
+		padding: 50px 15px 40px;
+		border-radius: 20px;
+	});
+
+	&__title {
+		margin-bottom: 60px;
+
+		font-weight: 700;
+		font-size: 60px;
+		line-height: 100%;
+		letter-spacing: 0.03em;
+
+		.md-block({
+			margin-bottom: 30px;
+			font-size: 30px;
+			line-height: 115%;
+		});
+
+		span {
+			color: @accent;
+		}
+	}
+
+	fieldset {
+		margin-bottom: 27px;
+		.md(margin-bottom, 22px);
+	}
+
+	legend {
+		margin-bottom: 20px;
+		font-weight: 700;
+		font-size: 20px;
+		line-height: 130%;
+		color: @accent;
+
+		.md-block({
+			margin-bottom: 10px;
+			font-size: 16px;
+		});
+	}
+
+	&__wrapper {
+		margin-bottom: 10px;
+		.md(margin-bottom, 7px);
+	}
+
+	&__info {
+		margin-top: -14px;
+		margin-bottom: 20px;
+		font-size: 14px;
+		line-height: 160%;
+		color: @ss5;
+
+		.md-block({
+			margin-top: 0;
+			font-size: 12px;
+			line-height: 130%;
+		});
+
+		ul li {
+			list-style: inside disc;
+		}
+	}
+
 	&__label {
+		margin-bottom: 3px;
 		display: block;
-		color: @ss6;
-		font-size: 12px;
+		color: @ss2;
+		font-size: 16px;
+		.md(font-size, 14px);
 	}
 
 	&__input {
+		width: 100%;
 		padding: 10px 10px 7px;
 		color: @ss4;
 		background: rgba(255, 255, 255, 0.2);
 		border-color: transparent;
-		border-radius: 2px;
+		border-radius: 6px;
+	}
 
+	textarea {
+		height: 70px;
 	}
 
 	&__btn {
-		display: block;
-		width: 100%;
-		
 		padding: 8px 26px;
 		font-size: 16px;
+
+		.sm(width, 100%);
 	}
 }
