--- a/src/less/sample.less
+++ b/src/less/sample.less
@@ -5,10 +5,19 @@
 		margin-bottom: 30px;
 		display: flex;
 		justify-content: space-between;
+
+		.xl-block({
+			margin-top: 18px;
+			margin-bottom: 28px;
+		});
 	}
 
 	&__btn {
 		width: 49%;
+
+		.md-block({
+			padding: 12px 8px;
+		});
 	}
 
 	&__banner {
