--- a/src/less/config.less
+++ b/src/less/config.less
@@ -14,6 +14,7 @@
 @white: #ffffff;
 @black: #0C0E15;
 @grey: #C4C4C4;
+@red: #EB5757;
 
 
 @userfont: 'Gilroy', Arial, sans-serif;
@@ -66,6 +67,14 @@ section {
 
 a {
 	color: @accent;
+}
+
+.hidden {
+	overflow: hidden;
+}
+
+.error {
+	color: red;
 }
 
 // :root {
@@ -169,6 +178,8 @@ body:not(.home) {
 }
 
 main {
+	position: relative;
+	z-index: 1;
 	// min-height: 100vh;
 	min-height: 500px;
 	overflow-x: hidden;
