--- a/src/less/memo.less
+++ b/src/less/memo.less
@@ -8,10 +8,50 @@
 		flex-grow: 1;
 	}
 
+	// &__section.active {
+	// 	background-color: @accent;
+	// }
+
 	&__nav {
 		margin-right: 30px;
 		width: 300px;
-		.md(display, none);
+		flex-shrink: 0;
+		.xl(display, none);
+	}
+
+	&__nav-item {
+		width: 300px;
+		// margin-bottom: 15px;
+		// padding-left: 30px;
+		padding-top: 10px;
+		padding-bottom: 10px;
+		// padding-right: 10px;
+		border-bottom: 2px solid @ss6;
+		// border-radius: 4px;
+
+		font-weight: 700;
+		font-size: 20px;
+		line-height: 130%;
+
+		svg {
+			padding-right: 5px;
+		}
+		
+		a {
+			color: @ss2;
+			text-decoration: none;
+		}
+
+		&.active, &:hover {
+			border-bottom-color: @accent;
+
+			a {
+				color: @accent;
+			}
+			svg path {
+				fill: @accent;
+			}
+		}
 	}
 
 	&__title {
@@ -53,6 +93,7 @@
 		});
 
 		.sm-block({
+			margin-bottom: 20px;
 			font-size: 20px;
 			line-height: 130%;
 		});
@@ -73,9 +114,259 @@
 		}
 	}
 
+	&__item {
+		display: flex;
+		// justify-content: space-between;
+
+		border-top: 2px solid @ss3;
+		padding-top: 30px;
+		padding-bottom: 50px;
+
+		.xl-block({
+			padding-top: 15px;
+			padding-bottom: 30px;
+		});
+
+		.md-block({
+			flex-wrap: wrap;
+		});
+
+		.sm-block({
+			padding-top: 15px;
+			padding-bottom: 20px;
+		});
+	}
+
+	&__item-title {
+		width: 170px;
+		flex-shrink: 0;
+		margin-right: 150px;
+
+		font-weight: 700;
+		font-size: 16px;
+		line-height: 130%;
+		letter-spacing: 0.02em;
+		color: @ss3;
+
+		.xl-block({
+			margin-right: 80px;
+			font-size: 14px;
+			line-height: 110%;
+		});
+
+		.md-block({
+			margin-right: 0;
+			margin-bottom: 20px;
+		});
+	}
+
+	&__item-text {
+		font-size: 20px;
+		line-height: 160%;
+		color: @ss2;
+
+		.xl(font-size, 16px);
+		.sm(font-size, 14px);
+	}
+
+// hero раздел
+
+	&__hero {
+		margin-bottom: 90px;
+		.xl(margin-bottom, 45px);
+	}
+
+	&__scale {
+		margin-bottom: 20px;
+
+		&-line {
+			padding: 10px 0;
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+
+			.xl-block({
+				padding: 5px 0;
+			});
+		}
+
+		&-line--top {
+			position: relative;
+			border-bottom: 2px solid @ss2;
+
+			&::before, &::after {
+				position: absolute;
+				content: '';
+				bottom: -4px;
+				width: 6px;
+				height: 6px;
+				border-radius: 50%;
+				background-color: @ss2;
+			}
+			
+			&::before {
+				left: 0;
+			}
+
+			&::after {
+				right: 0;
+			}
+
+			.memo__scale-data {
+				color: @accent;
+			}
+		}
+
+		&-data {
+			font-weight: 700;
+			font-size: 30px;
+			line-height: 115%;
+			color: @ss3;
+
+			.xl-block({
+				font-size: 20px;
+				line-height: 130%;
+			});
+
+			.sm-block({
+				font-size: 14px;
+				line-height: 110%;
+			});
+		}
+
+		&-age {
+			font-size: 20px;
+			line-height: 160%;
+			color: @ss3;
+			.xl(font-size, 16px);
+			.sm(font-size, 14px);
+		}
+	}
+
+	&__banner {
+		border-radius: 20px;
+		background-color: @ss6;
+		.xl(border-radius, 15px);
+	}
+
+	&__main-pic {
+		width: 100%;
+		height: 450px;
+
+		.xl(height, 400px);
+		.sm(height, 200px);
+
+		img {
+			width: 100%;
+			height: 450px;
+			object-fit: cover;
+			border-radius: 20px 20px 0px 0px;
+
+			.xl-block({
+				height: 400px;
+				border-radius: 15px 15px 0px 0px;
+			});
+			.sm(height, 200px);
+		}
+	}
+
+	&__cite {
+		padding: 30px;
+		text-align: center;
+		font-size: 20px;
+		line-height: 160%;
+
+		.xl-block({
+			padding: 20px 35px;
+			font-size: 16px;
+		});
+
+		.sm-block({
+			padding: 15px;
+			font-size: 14px;
+		});
+	}
+
+// раздел с биографией
+
+	// &__bio {
+		
+	// }
+
+	&__info {
+		.memo__item-title {
+			color: @ss1;
+		}
+	}
+
+// раздел с роднёй
+
+	&__relatives {
+		padding-top: 90px;
+		.xl(padding-top, 50px);
+		.sm(padding-top, 40px);
+
+		&-item {
+			display: flex;
+			// justify-content: space-between;
+
+			border-top: 1px solid @ss3;
+			padding-top: 30px;
+			padding-bottom: 50px;
+
+			&:last-of-type {
+				padding-bottom: 0;
+			}
+		}
+
+		&-box {
+			display: flex;
+
+			&+& {
+				margin-top: 30px;
+				.xl(margin-top, 20px);
+			}
+		}
+
+		&-rel {
+			flex-shrink: 0;
+			width: 170px;
+			margin-right: 10px;
+			font-weight: 700;
+			font-size: 30px;
+			line-height: 115%;
+			color: @ss1;
+
+			.xl-block({
+				width: 100px;
+				font-size: 20px;
+				line-height: 130%
+			});
+
+			.sm-block({
+				width: 80px;
+				font-size: 16px;
+			});
+		}
+	}
+
+// раздел с картой
+
 	&__location {
+		// padding-top: 90px;
+		padding-top: 40px;
 		margin-bottom: 90px;
 		padding-bottom: 34px;
+
+		.xl-block({
+			margin-bottom: 55px;
+			padding-bottom: 20px;
+		});
+
+		.sm-block({
+			margin-bottom: 40px;
+			padding-bottom: 30px;
+		});
 
 		&-content {
 			.row-flex();
@@ -98,6 +389,16 @@
 				width: 20px;
 				height: 20px;
 				background: url(../img/grave.svg) no-repeat;
+
+				.xl-block({
+					width: 16px;
+					height: 16px;
+				});
+
+				.sm-block({
+					width: 14px;
+					height: 14px;
+				});
 			}
 		}
 
@@ -109,12 +410,21 @@
 			line-height: 130%;
 			color: @accent;
 			border-bottom: 1px solid @ss4;
+
+			.xl(font-size, 16px);
+			.sm(font-size, 14px);
 		}
 
 		&-point {
 			font-size: 14px;
 			line-height: 160%;
 			color: @ss2;
+
+			.xl-block({
+				font-size: 12px;
+				line-height: 130%;
+			});
+			.sm(font-size, 10px);
 		}
 
 		.memo__map {
@@ -174,6 +484,8 @@
 		}
 	}
 
+// раздел с qr кодом
+
 	&__qr {
 		padding: 90px 50px 50px;
 		text-align: center;
@@ -181,12 +493,24 @@
 		background-color: @ss6;
 		border-radius: 20px;
 
+		.xl-block({
+			padding: 40px 40px 30px;
+			border-radius: 15px;
+		});
+
+		.sm-block({
+			padding: 30px 15px;
+		});
+
 		.memo__header {
 			// position: relative;
 			max-width: 550px;
 			margin-left: auto;
 			margin-right: auto;
 			text-align: center;
+
+			.xl(margin-bottom, 12px);
+			.sm(margin-bottom, 20px);
 
 			// &::before {
 			// 	position: absolute;
@@ -197,6 +521,28 @@
 			// 	height: 40px;
 			// 	background: url(../img/memo-qr.svg) no-repeat;
 			// }
+
+			svg {
+				.xl-block({
+					width: 30px;
+					height: 30px;
+				});
+				.sm-block({
+					width: 20px;
+					height: 20px;
+				});
+			}
+		}
+
+		img {
+			.xl-block({
+				width: 300px;
+				height: 300px;
+			});
+			.sm-block({
+				width: 260px;
+				height: 260px;
+			})
 		}
 	}
 }
