--- a/src/less/popup.less
+++ b/src/less/popup.less
@@ -1,9 +1,102 @@
-.glightbox-container {
-	.ginner-container {
-		align-items: center;
-	}
+// .glightbox-container {
+// 	.ginner-container {
+// 		align-items: center;
+// 	}
 		
-		.gprev, .gnext {
-			display: none;
-		}
+// 		.gprev, .gnext {
+// 			display: none;
+// 		}
+// 		.gslide-inline {
+// 			background: transparent;
+
+// 			.ginlined-content {
+// 				padding: 0;
+// 			}
+// 		}
+
+		
+// }
+
+.modal {
+  display: none;
+	position: fixed;
+	overflow-y: auto;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 998;
+
+	background-color: rgba(0,0,0,0.8);
+
+	// &::after {
+	// 	position: absolute;
+	// 	content: '';
+	// 	left: 0;
+	// 	top: 0;
+	// 	width: 100%;
+	// 	height: 100%;
+	// }
 }
+
+.modal--form {
+	form {
+		position: absolute;
+		left: 50%;
+		transform: translateX(-50%);
+		top: 50px;
+	}
+}
+
+.modal-close {
+	position: absolute;
+	right: 27px;
+	top: 27px;
+  background: transparent;
+  border: 0;
+	font-weight: 700;
+	font-size: 27px;
+	color: @ss3;
+	cursor: pointer;
+	transition: transform 0.3s ease;
+
+	&:hover {
+		transform: scale(1.05);
+	}
+
+	&::before {
+		content: "\2715"; 
+	}
+}
+
+.modal.is-open {
+  display: block;
+}
+
+.modal[aria-hidden="false"] {
+  animation: mmfadeIn .3s cubic-bezier(0.0, 0.0, 0.2, 1);
+}
+
+.modal[aria-hidden="true"] {
+  animation: mmfadeOut .3s cubic-bezier(0.0, 0.0, 0.2, 1);
+}
+
+@keyframes mmfadeIn {
+	from { opacity: 0; }
+		to { opacity: 1; }
+}
+
+@keyframes mmfadeOut {
+	from { opacity: 1; }
+		to { opacity: 0; }
+}
+
+// @keyframes mmslideIn {
+//   from { transform: translateY(15%); }
+//     to { transform: translateY(0); }
+// }
+
+// @keyframes mmslideOut {
+//     from { transform: translateY(0); }
+//     to { transform: translateY(-10%); }
+// }
