--- a/src/less/price.less
+++ b/src/less/price.less
@@ -209,7 +209,7 @@
 			}
 
 			&:nth-child(2)::before {
-				background-image: url(../img/point-2.svg);
+				background-image: url(../img/memo-qr.svg);
 			}
 
 			&:nth-child(3)::before {
