--- a/src/less/aim.less
+++ b/src/less/aim.less
@@ -82,6 +82,11 @@
 			width: 100%;
 			display: none;
 			.sm(display, block);
+
+			> * {
+				width: 100%;
+				height: auto;
+			}
 		}
 
 		img {
