--- a/src/less/advantages.less
+++ b/src/less/advantages.less
@@ -80,7 +80,12 @@
 		line-height: 160%;
 		color: @ss2;
 
-		.xl(font-size, 14px);
+		.xl-block({
+			font-size: 14px;
+			br {
+				display: none;
+			}
+		});
 
 		.sm-block({
 			font-size: 12px;
