--- a/src/less/form.less
+++ b/src/less/form.less
@@ -38,6 +38,7 @@
 		.md(margin-bottom, 22px);
 	}
 
+
 	legend {
 		margin-bottom: 20px;
 		font-weight: 700;
@@ -100,5 +101,12 @@
 		font-size: 16px;
 
 		.sm(width, 100%);
+	}
+
+	&__log {
+		padding: 10px 5px;
+		font-weight: 700;
+		font-size: 13px;
+		color: @accent;
 	}
 }
