--- a/src/less/modal.less
+++ b/src/less/modal.less
@@ -30,7 +30,7 @@
 	font-size: 30px;
 	color: @ss3;
 	cursor: pointer;
-	transition: transform 0.3s ease;
+	// transition: transform 0.3s ease;
 
 	.md-block({
 		top: 2px;
@@ -38,9 +38,9 @@
 		font-size: 25px;
 	});
 
-	&:hover {
-		transform: scale(1.05);
-	}
+	// &:hover {
+	// 	transform: scale(1.05);
+	// }
 
 	&::before {
 		content: "\2715"; 
