site creation done

--- a/src/less/contacts.less
+++ b/src/less/contacts.less
@@ -1,9 +1,9 @@
 .contacts {
-	padding-top: 21px;
+	// padding-top: 21px;
 
-	.sm-block({
-		padding-top: 5px;
-	});
+	// .sm-block({
+	// 	padding-top: 5px;
+	// });
 
 	.section__content {
 		// padding-top: 64px;
