--- a/src/less/error404.less
+++ b/src/less/error404.less
@@ -1,4 +1,4 @@
-.error404 {
+.error404in {
 	padding-top: 20px;
 	padding-bottom: 130px;
 	background: url(../img/error404-bg.jpg) no-repeat center/cover;
