--- a/src/less/modal.less
+++ b/src/less/modal.less
@@ -12,7 +12,7 @@
 
 .modal__container {
 	position: relative;
-	top: 50px;
+	// top: 50px;
   max-width: 740px;
 	margin: 0 auto;
   // max-height: 100vh;
