--- a/src/less/animate.less
+++ b/src/less/animate.less
@@ -1,13 +1,52 @@
 .title-animation-idle {
-  display: block;
-  -webkit-transform: translate(0, 5rem);
-          transform: translate(0, 5rem);
-  transition: all 0.6s ease;
-  opacity: 0;
+	display: block;
+	transform: translate(0,5rem);
+	transition: all .6s ease;
+	opacity: 0
 }
 
 .title-animation-idle.activate-animation {
-  -webkit-transform: translate(0, 0);
-          transform: translate(0, 0);
-  opacity: 1;
+	transform: translate(0,0);
+	opacity: 1
 }
+
+.text-animation-idle {
+	opacity: 0;
+	transition: all 2s ease
+}
+
+.text-animation-idle.activate-animation {
+	opacity: 1
+}
+
+// .img-animation-idle {
+// 	transition: all 5s ease;
+// 	background-size: 100%
+// }
+
+// .img-animation-idle:hover {
+// 	background-size: 120%
+// }
+
+// .img-animation-with-filter-idle {
+// 	transition: filter .5s ease,background-size 5s ease;
+// 	background-size: 100%;
+// 	filter: grayscale(1)
+// }
+
+// .img-animation-with-filter-idle:hover {
+// 	background-size: 120%;
+// 	filter: grayscale(0)
+// }
+
+// .img-animation-scale-idle {
+// 	transition: all 5s ease;
+// 	transform: scale(1);
+// 	height: 100%;
+// 	background-size: cover;
+// 	background-position: center
+// }
+
+// .img-animation-scale-idle:hover {
+// 	transform: scale(1.2)
+// }
