--- a/src/less/config.less
+++ b/src/less/config.less
@@ -28,6 +28,7 @@
 	url('../fonts/Gilroy-Regular.ttf') format('truetype');
 	font-weight: 400;
 	font-style: normal;
+	font-display: swap;
 }
 
 @font-face {
@@ -38,6 +39,7 @@
 	url('../fonts/Gilroy-Bold.ttf') format('truetype');
 	font-weight: 700;
 	font-style: normal;
+	font-display: swap;
 }
 
 .reset();
