--- a/src/less/memo.less
+++ b/src/less/memo.less
@@ -5,22 +5,21 @@
 	}
 
 	&__content {
-		flex-grow: 1;
+		// flex-grow: 1;
+		width: 75%;
+		.xl(width, 100%);
 	}
-
-	// &__section.active {
-	// 	background-color: @accent;
-	// }
 
 	&__nav {
 		margin-right: 30px;
-		width: 300px;
-		flex-shrink: 0;
+		// width: 300px;
+		width: 20%;
+		// flex-shrink: 0;
 		.xl(display, none);
 	}
 
 	&__nav-item {
-		width: 300px;
+		// width: 300px;
 		// margin-bottom: 15px;
 		// padding-left: 30px;
 		padding-top: 10px;
@@ -74,8 +73,11 @@
 		});
 	}
 
-
-
+	&__section {
+		margin-bottom: 90px;
+		.xl(margin-bottom, 45px);
+		.sm(margin-bottom, 40px);
+	}
 
 	&__header {
 		margin-bottom: 50px;
@@ -289,22 +291,137 @@
 
 // раздел с биографией
 
-	// &__bio {
-		
-	// }
+	&__bio {
+		margin-bottom: 30px;
+	}
 
 	&__info {
+		margin-bottom: 90px;
+		.xl(margin-bottom, 45px);
+		.sm(margin-bottom, 40px);
+
+		.memo__item {
+			border-top: none;
+		}
 		.memo__item-title {
+			font-size: 20px;
+			line-height: 130%;
 			color: @ss1;
 		}
+	}
+
+	&__info-wrapper {
+		display: flex;
+		justify-content: space-between;
+		.md-block({
+			flex-wrap: wrap;
+		});
+	}
+
+	&__info-list {
+		width: 48%;
+		min-width: 295px;
+		.md(width, 100%);
+
+		li {
+			padding-bottom: 15px;
+			margin-bottom: 23px;
+			border-bottom: 1px solid @ss5;
+
+			.xl-block({
+				padding-bottom: 10px;
+				margin-bottom: 30px;
+			});
+
+			.sm(margin-bottom, 10px);
+		}
+	}
+
+	&__info-header {
+		position: relative;
+		margin-bottom: 23px;
+		padding-left: 50px;
+		font-weight: 700;
+		font-size: 16px;
+		line-height: 130%;
+		letter-spacing: 0.02em;
+		color: @ss4;
+
+		.xl-block({
+			margin-bottom: 16px;
+			padding-left: 35px;
+			font-size: 14px;
+			line-height: 110%
+		});
+
+		.sm-block({
+			margin-bottom: 12px;
+			padding-left: 25px;
+		});
+
+		&::before {
+			position: absolute;
+			content: '';
+			left: 0;
+			top: 50%;
+			transform: translateY(-50%);
+			width: 40px;
+			height: 40px;
+			background-repeat: no-repeat;
+
+			.xl-block({
+				width: 30px;
+				height: 30px;
+			});
+
+			.sm-block({
+				width: 20px;
+				height: 20px;
+			});
+		}
+
+		&.memo--birth::before {
+			background-image: url(../img/memo-birth.svg);
+		}
+
+		&.memo--citizen::before {
+			background-image: url(../img/memo-citizen.svg);
+		}
+
+		&.memo--educ::before {
+			background-image: url(../img/memo-educ.svg);
+		}
+
+		&.memo--death::before {
+			background-image: url(../img/memo-death.svg);
+		}
+
+		&.memo--occup::before {
+			background-image: url(../img/memo-occup.svg);
+		}
+
+	}
+
+	&__info-text {
+		font-weight: 700;
+		font-size: 20px;
+		line-height: 130%;
+		color: @ss2;
+
+		.xl(font-size, 16px);
+
+		.sm-block({
+			font-size: 14px;
+			line-height: 110%;
+		})
 	}
 
 // раздел с роднёй
 
 	&__relatives {
-		padding-top: 90px;
-		.xl(padding-top, 50px);
-		.sm(padding-top, 40px);
+		// padding-top: 90px;
+		// .xl(padding-top, 50px);
+		// .sm(padding-top, 40px);
 
 		&-item {
 			display: flex;
@@ -350,11 +467,146 @@
 		}
 	}
 
+// достижения
+
+	&__awards {
+		padding-bottom: 30px;
+	}
+
+	&__awards-list {
+		display: flex;
+		flex-wrap: wrap;
+
+		li {
+			margin-bottom: 20px;
+			max-width: 295px;
+			padding-top: 55px;
+			padding-right: 20px;
+			position: relative;
+
+			font-weight: 700;
+			font-size: 20px;
+			line-height: 130%;
+			color: @ss2;
+
+			.xl-block({
+				max-width: 220px;
+				margin-bottom: 15px;
+				padding-top: 40px;
+				font-size: 16px;
+			});
+
+			.sm-block({
+				max-width: 140px;
+				margin-bottom: 10px;
+				padding-top: 25px;
+				font-size: 14px;
+				line-height: 110%;
+			});
+
+			&::before {
+				position: absolute;
+				content: '';
+				left: 0;
+				top: 0;
+				width: 40px;
+				height: 40px;
+				background: url(../img/awards.svg) no-repeat;
+
+				.xl-block({
+					width: 30px;
+					height: 30px;
+				});
+
+				.sm-block({
+					width: 20px;
+					height: 20px;
+				});
+			}
+		}
+	}
+
+// фотогалерея
+@import "memo/foto.less";
+
+// аудио-плеер
+@import "memo/audio.less";
+
+// видео-слайдер
+@import "memo/video.less";
+
+// соцсети
+
+&__links {
+	padding-bottom: 45px;
+	.xl(padding-bottom, 30px);
+
+	ul {
+		display: flex;
+		flex-wrap: wrap;
+
+		li {
+			position: relative;
+			margin-bottom: 15px;
+			margin-right: 30px;
+			padding-left: 35px;
+
+			font-weight: 700;
+			font-size: 20px;
+			line-height: 130%;
+			color: @ss2;
+
+			.xl-block({
+				margin-right: 15px;
+				padding-left: 25px;
+				font-size: 16px;
+			});
+
+			.sm-block({
+				margin-right: 20px;
+				padding-left: 20px;
+				font-size: 14px;
+			});
+
+			&::before {
+				position: absolute;
+				content: '';
+				left: 0;
+				top: 50%;
+				transform: translateY(-50%);
+				width: 30px;
+				height: 30px;
+				background: url(../img/link.svg) no-repeat;
+
+				.xl-block({
+					width: 20px;
+					height: 20px;
+				});
+
+				.sm-block({
+					width: 14px;
+					height: 14px;
+				});
+			}
+		}
+
+		a {
+			color: inherit;
+			text-decoration: none;
+			transition: color 0.3s ease;
+
+			&:hover {
+				color: @accent;
+			}
+		}
+	}
+}
+
 // раздел с картой
 
 	&__location {
 		// padding-top: 90px;
-		padding-top: 40px;
+		// padding-top: 40px;
 		margin-bottom: 90px;
 		padding-bottom: 34px;
 
@@ -437,56 +689,14 @@
 	&__map {
 		width: 625px;
 		height: 400px;
-		background: url(../img/memo-map-premium.jpg) no-repeat center/cover;
+		// background: url(../img/memo-map-premium.jpg) no-repeat center/cover;
 		border-radius: 10px;
-	}
-
-	&__links {
-		margin-bottom: 90px;
-		padding-bottom: 45px;
-
-		ul {
-			display: flex;
-			flex-wrap: wrap;
-
-			li {
-				position: relative;
-				margin-bottom: 15px;
-				margin-right: 30px;
-				padding-left: 35px;
-
-				font-weight: 700;
-				font-size: 20px;
-				line-height: 130%;
-				color: @ss2;
-
-				&::before {
-					position: absolute;
-					content: '';
-					left: 0;
-					top: 50%;
-					transform: translateY(-50%);
-					width: 30px;
-					height: 30px;
-					background: url(../img/link.svg) no-repeat;
-				}
-			}
-
-			a {
-				color: inherit;
-				text-decoration: none;
-				transition: color 0.3s ease;
-
-				&:hover {
-					color: @accent;
-				}
-			}
-		}
 	}
 
 // раздел с qr кодом
 
 	&__qr {
+		margin-bottom: 0;
 		padding: 90px 50px 50px;
 		text-align: center;
 
@@ -548,8 +758,8 @@
 }
 
 
-.memo.memo--base {
-	.memo__map {
-		background: url(../img/memo-map-base.jpg) no-repeat center/cover;
-	}
-}
+// .memo.memo--base {
+// 	.memo__map {
+// 		background: url(../img/memo-map-base.jpg) no-repeat center/cover;
+// 	}
+// }
